--- a/refind/refind-dark/refind-dark.conf
+++ b/refind/refind-dark/refind-dark.conf
@@ -32,7 +32,7 @@ banner refind-dark/banners/bg.png
 
 # banner_scale fillscreen
 #Display, customize according to your display
-resolution 2560 1600
+resolution max
 
 
 #Graphics
