--- a/refind/refind-dark/refind-dark.conf
+++ b/refind/refind-dark/refind-dark.conf
@@ -24,7 +24,7 @@ default_selection Microsoft
 use_nvram false
 
 #Timeout (auto select os)
-timeout 3
+timeout 6
 #Background Image
 banner refind-dark/banners/bg.png
 # banner refind-dark/banners/background2560x1600.png # for 2560x1600
@@ -67,9 +67,30 @@ scan_all_linux_kernels false
 # icon /EFI/refind/icons/os_win.png 为图标路径
 # loader /EFI/Microsoft/Boot/bootmgfw.efi 为EFI引导文件的路径
 # 删除disabled以使代码生效
+
+
 menuentry "Windows 11" {
     icon /EFI/refind/refind-dark/icons/os_windows.png
+    volume 628233D2-54C0-4BA5-8B38-708CEBAB20BF
     loader /EFI/Microsoft/Boot/bootmgfw.efi
     disabled
 }
+
+menuentry "Windows 10" {
+    icon /EFI/refind/refind-dark/icons/os_win.png
+    volume AA96136A-40BD-451A-898D-A1FF4BF29A86
+    loader /EFI/Microsoft/Boot/bootmgfw.efi
+    disabled
+}
+
+menuentry "Ventoy" {
+    icon /EFI/refind/refind-dark/icons/os_linux.png
+    volume 788882B2-099F-4617-9001-933A5CB6F063
+    loader EFI\BOOT\grub.efi
+    disabled
+}
+
+
+
+
 
